--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<img src="img/baidu.png">
 </div>
 <div class="input">
-<form action="http://www.baidu.com/baidu" method="post" target="_blank">
+<form action="http://www.baidu.com/baidu" target="_blank">
 	<input id="input1" type="text" name="word" size="60">
     <input id="input2" type="submit" value="搜索一下">
 	</form>
